--- a/src/Components/Add Event/AddEvent.css
+++ b/src/Components/Add Event/AddEvent.css
@@ -25,9 +25,13 @@ a {
   width: 20%;
 }
 
-.right-main-container {
+/* .right-main-container {
   height: 100vh;
   width: 80%;
+} */
+
+.home-main {
+  padding: 1rem 2rem;
 }
 
 .add-events-outer-container .add-events-main-container {
