--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -28,11 +28,12 @@ a {
 .right-main-container {
   height: 100vh;
   width: 80%;
+  overflow-y: scroll;
 }
 
 .events-main-container {
   height: 100vh;
-  width: 100%;
+  width: 75vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -40,6 +41,7 @@ a {
   flex-direction: column;
   justify-content: left;
 }
+
 .events-main-container .header-tabs-container {
   width: 100%;
   height: 15vh;
@@ -82,8 +84,8 @@ a {
   background-color: #1D4ED8;
   color: white;
 }
-.events-main-container .event-cards-container {
+.events-main-container .event-body-container {
   width: 100%;
-  height: 85vh;
+  height: 80vh;
   overflow: auto;
 }/*# sourceMappingURL=Events.css.map */
