--- a/src/Components/Common/Button.css
+++ b/src/Components/Common/Button.css
@@ -4,14 +4,13 @@
 
 .btn-container button {
   height: 3rem;
-  width: 8rem;
+  min-width: 8rem;
   display: flex;
   font-size: 1.2rem;
   justify-content: center;
   align-items: center;
   color: white;
   gap: 0.5rem;
-  /* padding: 10px 20px; */
   border-radius: 0.5rem;
   cursor: pointer;
   box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
