--- a/src/App.css
+++ b/src/App.css
@@ -40,15 +40,16 @@ a {
   margin-left: 20vw;
   width: 80%;
   padding: 1rem 2rem;
-  overflow-y: scroll;
+  /* overflow-y: hidden; */
 } /*# sourceMappingURL=App.css.map */
 
 .loader_center_parent {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #ffffff6b;
 }
 @keyframes lds-ring {
   0% {
