--- a/src/Components/Common/Button.css
+++ b/src/Components/Common/Button.css
@@ -15,7 +15,8 @@
   cursor: pointer;
   padding: 0 0.75rem;
   box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
-  transition: 100ms color ease-in-out, 100ms background-color ease-in-out;
+  transition: all 250ms;
+  /* transition: 100ms color ease-in-out, 100ms background-color ease-in-out; */
 }
 
 .btn-container .primary {
