--- a/src/Components/Common/DropDown.css
+++ b/src/Components/Common/DropDown.css
@@ -1,20 +1,37 @@
 /* Dropdown */
 
 .dropdown {
-  /* width: 16rem; */
+  /* width: max-content; */
+  display: flex;
+  flex-wrap: wrap;
   margin: 0.75rem 0px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .dropdown select {
+  margin-top: 2px;
   font-size: 1rem;
-  border-radius: 0.5rem;
-  padding: 0.5rem 2rem;
-  border: none;
+  border-radius: 0.3rem;
   padding: 0.5rem 1rem;
-  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, .2);
+  border: 2px solid rgba(255, 255, 255, 0.5);
+}
+
+.dropdown select:hover{
+  border: 2px solid #AAAAAA;
+  box-shadow: none;
 }
 
 
 .dropdown__label {
+  width: fit-content;
   margin-right: 1rem;
+}
+
+.dropdown select:focus{
+  font-weight: 500;
+  /* border-width: 2px; */
+  border: 2px solid rgba(29, 78, 216, 0.5);
+  box-shadow: none;
 }
