--- a/src/Components/Common/TableCard.css
+++ b/src/Components/Common/TableCard.css
@@ -9,6 +9,8 @@
     border-radius: 8px;
     color: #5A5A5A;
     background-color: white;
+    justify-content: space-between;
+    gap: 5px;
 }
 
 .card-container:hover{
@@ -17,22 +19,30 @@
     color: black;
 }
 
-.flex{
-    display:flex;
-    flex-wrap: wrap;
-}
-
 .btn-container .card-button{
     height: 2.5rem;
     margin: 0px 5px;
 }
 
-p{
-    flex:2;
+.card-container p{
+    /* flex:2; */
+    width: 12vw;
     margin-Bottom:0px; 
+    overflow: hidden;
+    white-space: nowrap;
     padding-top:8px;
+    text-overflow: ellipsis;
+    text-align: center;
 }
 
-.header{
-    font-size: 20px;
+.card-container p:first-child{
+    text-align: left;
+}
+/* p:hover{
+    overflow: visible;
+    z-index: 2;
+} */
+
+.card-container .btn-container{
+    justify-content: end;
 }
