--- a/src/Components/Common/TextField.css
+++ b/src/Components/Common/TextField.css
@@ -11,16 +11,17 @@
 
 .input__field {
   width: 100%;
-  border: none;
+  /* border: none; */
   color: #212121;
   font-family: inherit;
   font-size: clamp(1rem, 1.5vh, 2rem);
   background-color: #ffffff;
   outline: 0;
   padding: 0.5rem;
-  border-radius: 0.5rem;
-  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, .25);
+  border-radius: 0.3rem;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, .2);
   transition: border-color 0.2s;
+  border: 2px solid rgba(255, 255, 255, 0.5);
 }
 
 .input__field::placeholder {
@@ -41,6 +42,11 @@
   font-size: 1rem;
   color: #000000;
   pointer-events: none;
+}
+
+.input__field:hover{
+  border: 2px solid #AAAAAA;
+  box-shadow: none;
 }
 
 .input__field:focus {
@@ -87,5 +93,11 @@
 } */
 
 .disabled{
-  color: #5a5a5a;
+  color: #6c757d;
 }
+
+.input__group input[type="checkbox"] {
+  width: 4rem;
+  height: 4rem;
+}
+
