--- a/src/Components/Common/Tooltip.css
+++ b/src/Components/Common/Tooltip.css
@@ -9,11 +9,11 @@
   text-align: left;
   border-radius: 4px;
   position: absolute;
-  z-index: 1;
+  z-index: 12;
   box-shadow: 0 0 12px 4px rgba(0, 0, 0, 0.1);
   padding: 5px;
   color: #fff;
-  background-color: #1c1917;
+  background-color: #1c1917b6;
   top: auto;
   bottom: -3rem;
 }
