--- a/src/Components/Home/EventInfo/EventBanner.css
+++ b/src/Components/Home/EventInfo/EventBanner.css
@@ -1,41 +1,45 @@
 .event-banner {
-    width: 25vw;
-    height: 15vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1rem;
-    background-size: cover;
-    transition: 250ms;
-  }
-  
-  .event-banner input {
-    visibility: hidden;
-  }
-  
-  .event-banner .file-upload-btn {
-    opacity: 0;
-  }
-  
-  .event-banner:hover {
-    filter: brightness(85%);
-  }
-  
-  .event-banner:hover .file-upload-btn {
-    opacity: 100;
-  }
-  
-  .event-banner button {
-    width: 40%;
-    height: 20%;
-    color: #ffffff;
-    font-size: 1rem;
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 0.5rem;
-    border: 2px solid #ffffff;
-    box-shadow: 0 0 2px 0 #ffffff;
-    background-color: transparent;
-  }
-  
+  width: 25vw;
+  height: 15vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1rem;
+  background-size: cover;
+  transition: 250ms;
+}
+
+.event-banner input {
+  visibility: hidden;
+}
+
+.event-banner .file-upload-btn {
+  opacity: 0;
+
+  width: max-content;
+  height: 20%;
+  color: black;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  backdrop-filter: blur(2px);
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 2px 0 #ffffff;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.event-banner:hover {
+  filter: brightness(85%);
+}
+
+.event-banner:hover .file-upload-btn {
+  opacity: 100;
+}
+
+
+.event-banner button:disabled{
+  cursor: not-allowed;
+}
