--- a/src/Components/Home/EventInfo/EventInfo.css
+++ b/src/Components/Home/EventInfo/EventInfo.css
@@ -1,9 +1,17 @@
 .formRight{
-width: 50%;
+width: 40%;
 padding: 1rem;
-float: left;
 display: flex;
 flex-direction: column;
+justify-content: space-between;
+}
+
+.formLeft{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  padding: 1rem;
+  justify-items: center;
 }
 
 .timeContainer{
@@ -19,11 +27,6 @@ margin: 1rem;
 position: relative;
 display: inline;
 font-size: 1rem;
-}
-
-.formLeft{
-width: 50%;
-padding: 1rem;
 }
 
 .btn-holder{
@@ -44,7 +47,7 @@ margin: 10px 0;
 
 .form-container {
 display: flex;
-gap: 1rem;
+justify-content: space-around;
 }
 
 .event-info {
@@ -52,9 +55,9 @@ width: 33%;
 height: 100%;
 }
 
-.event-info form {
-height: 100%;
+.event-info-left form {
 padding-top: 1rem;
+width: 70%;
 }
 
 .event-time-container {
@@ -63,7 +66,7 @@ justify-content: space-between;
 }
 
 .faculty-list{
-  height: 79vh;
+  height: 90%;
 }
 
 .update-delete-container{
