--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,7 +1,9 @@
 .home-main  {
     display: flex;
     flex-direction: column;
-    padding: 0px !important;   
+    padding: 0px; 
+    overflow-y: scroll;
+    height: 100%;
 }
 
 .events-container {
@@ -9,15 +11,20 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     row-gap: clamp(2rem, 2vw, 6rem);
-    column-gap: clamp(2rem, 4vw, 8rem);
+    column-gap: clamp(2rem, 5vw, 8rem);
     padding: 2rem 0px;
 }
 
-.pageControls .left-controls{
-    float: left;
+.pageControls .right-controls{
+    display: flex;
+    margin: 3.5px;
+    flex-wrap: wrap;
+    width:max-content;
 }
 
-.pageControls .right-controls{
-    float: right;
-    margin: 3.5px;
+.pageControls{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
 }
