--- a/src/Components/Organizer/Organizer.css
+++ b/src/Components/Organizer/Organizer.css
@@ -1,19 +1,24 @@
 .organizers-main-container {
     display: flex;
+    gap: 1vw;
 }
 
 .organizers-container {
     height: max-content;
     flex: 1;
     background-color: #F5FCFF;
-    margin: 10px 20px ; 
     padding: 20px;
     box-shadow: 0 0 20px 4px #00000010;
 }
 
 .organizer-table{
     min-height: wrap;
-    max-height: 42rem;
+    max-height: 70vh;
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+ul{
+    list-style-type: none;
+    padding:1rem;
 }
