--- a/src/Components/Venue/Venue.css
+++ b/src/Components/Venue/Venue.css
@@ -13,7 +13,7 @@
 
 .venue-table{
     min-height: wrap;
-    max-height: 42rem;
+    max-height: 70vh;
     overflow-y: scroll;
     overflow-x: hidden;
 }
