--- a/src/Components/Home/EventCard/EventCard.css
+++ b/src/Components/Home/EventCard/EventCard.css
@@ -29,6 +29,28 @@
   -o-object-position: center;
   object-position: center;
 }
+
+.default-backdrop{
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  display: flex;
+  background-color: white;
+  border-bottom: 1px solid lightgray;
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
+
+.default-backdrop>p{
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: bold;
+  margin: 0px;
+  text-transform: capitalize;
+}
 .card-main-container .card-info-container {
   display: flex;
   flex-direction: column;
