Minor bug fixes and improvements (#17)

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,5 +1,5 @@
 .login-main{
-    background-image:url('../Images/LoginImage.jpg');
+    background-image:url('../../assets/LoginImage.jpg');
     background-size: cover;
     background-position: center;
     width: 100vw;
